--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,6 +16,7 @@
     </ion-label>
     <ion-input
       placeholder="Enter your list title"
+      [(ngModel)]="sharedDataSvc.text"
     >
 
     </ion-input>
